[package]
name = "staking_pool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
soroban-pausable = { version = "0.1.0", path = "../soroban_pausable" }
soroban-sdk = "22.0.7"
soroban_access_control = { version = "0.1.0", path = "../soroban_access_control" }

[dev-dependencies]
soroban-sdk = { version = "22.0.7", features = ["testutils"] }
serde_json = "1"
serde = { version = "1", features = ["derive"] }
